<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_average">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:accessibilityHeading="false"
                android:fontFamily="sans-serif-smallcaps"
                android:padding="@dimen/padding_small"
                android:text="@string/movie_title_placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:padding="@dimen/padding_small"
                android:text="@string/release_date_placeholder"
                android:textSize="24sp" />
        </LinearLayout>


        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:adjustViewBounds="true"
            android:padding="@dimen/padding_small"
            android:contentDescription="@string/content_desc_img"
            android:src="@drawable/image_placeholder" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:padding="@dimen/padding_small"
                android:text="@string/user_score"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_small"
                android:text="@string/user_score_placeholder"
                android:textSize="24sp" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:padding="@dimen/padding_small"
            android:text="@string/overview"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/tv_movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:textSize="20sp"
            android:text="@string/overview_placeholder" />

    </LinearLayout>
</ScrollView>